second commit: index.html and main.css modified

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <main id="main">
+        <h1 id="title">Martin Luther King Jr.</h1>
+        <h4 id="">The man who had a dream.</h4>
+        <div id="image-div">
+            <img src="MLKJr.jpg" id="image">
+            <caption id="img-caption"></caption>
+        </div>
+        <div id="tribute-info">
+            <h3></h3>
+            <ul>
+                <li>Martin Luther King Jr was born in </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li>He died in </li>
+            </ul>
+        </div>
+        <p><a href="#" id="tribute-link">click here!</a></p>
+    </main>
+    <script src="index.html"></script>
 </body>
 </html>
