third commit: css style in id title, image and main

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main id="main">
         <h1 id="title">Martin Luther King Jr.</h1>
-        <h4 id="">The man who had a dream.</h4>
+        <h4 id="title-desc">The man who had a dream.</h4>
         <div id="image-div">
-            <img src="MLKJr.jpg" id="image">
-            <caption id="img-caption"></caption>
+            <img src="MLKJr.jpg" id="image"><br>
+            <caption id="img-caption">Rev. Marthin Luther King Jr.</caption>
         </div>
         <div id="tribute-info">
             <h3></h3>
