--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="main">
         <h1 id="title">Martin Luther King Jr.</h1>
-        <h4 id="title-desc">The man who had a dream.</h4>
+        <p id="desc-title">The man who had a dream.</p>
         <div id="image-div">
             <img src="MLKJr.jpg" id="image"><br>
             <caption id="img-caption">Rev. Marthin Luther King Jr.</caption>
