--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         </div>
         <p><a href="#" id="tribute-link">click here!</a></p>
     </main>
-    <script src="index.html"></script>
+    <script src="app.js"></script>
 </body>
 </html>
