--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1 id="title">Martin Luther King Jr.</h1>
         <p id="desc-title">The man who had a dream.</p>
         <div id="image-div">
-            <img src="MLKJr.jpg" id="image"><br>
-            <caption id="img-caption">Rev. Marthin Luther King Jr.</caption>
+            <img src="MLKJr.jpg" id="image">
         </div>
         <div id="tribute-info">
             <h3></h3>
