modificações finais nos arquivos index.html e main.css

--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribute Page</title>
     <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <main id="main">
-        <h1 id="title">Martin Luther King Jr.</h1>
-        <p id="desc-title">The man who had a dream.</p>
-        <div id="image-div">
-            <img src="MLKJr.jpg" id="image">
-        </div>
-        <div id="tribute-info">
-            <h3></h3>
+    <title>Tribute Page</title>
+</head> 
+<body> 
+    <main id="main"> <!--User Story #1-->
+        <header>
+            <h1 id="title">Dr. Martin Luther King Jr</h1> <!--User Story #2-->
+        </header>
+        <figure id="img-fig"> <!--User Story #3-->
+            <img src="MLKJr.jpg" alt="Photo of Dr. Martin Luther King Jr." id="image"> <!--User Story #4, #8 and #9-->
+            <figcaption id="img-caption">Dr. Marthin Luther King Jr in one of his speaches about civil rights.</figcaption> <!--User Story #5-->
+        </figure>
+        <div id="tribute-info"> <!--User Story #6-->
+            <h3>Time line of Dr. King's life</h3>
             <ul>
-                <li>Martin Luther King Jr was born in </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li>He died in </li>
+                <li><p><strong>1929</strong> - He was born on January 15th, Atlanta, Gerogia.</p></li>
+                <li><p><strong>1948</strong> - He graduates from Morehouse College and enters Crozer Theological Seminary and is ordained to the Baptist ministry, February 25, at age 19.</p></li>
+                <li><p><strong>1951</strong> - He enters Boston University, Boston, Massachusetts, for graduate studies.</p></li>
+                <li><p><strong>1953</strong> - He marries Coretta Scott and settles in Montgomery, Alabama.</p></li>
+                <li><p><strong>1955</strong> - He received Doctorate of Philosophy in Systematic Theology from Boston University. In this year he joins the bus boycott after Rosa Parks was arrested on December 1. On December 5, he is elected president of the Montgomery Improvement Association, making him the official spokesperson for the boycott.</p></li>
+                <li><p><strong>1956</strong> - On November 13, the Supreme Court rules that bus segregation is illegal, ensuring victory for the boycott.</p></li>
+                <li><p><strong>1957</strong> - He forms the Southern Christian Leadership Conference to fight segregation and achieve civil rights. On May 17, Dr. King  speaks to a crowd of 15,000 in Washington, D.C.</p></li>
+                <li><p><strong>1963</strong> - June 23, MLK leads 125,000 people on a Freedom Walk in Detroit. August 28, the March on Washington becomes the largest civil rights demonstration in history with nearly 250,000 people in attendance and King makes his famous I Have a Dream speech.</p></li>
+                <li><p><strong>1965</strong> - On February 2, King is arrested in Selma, Alabama during a voting rights demonstration. After President Johnson signs the Voting Rights Act into law, Martin Luther King, Jr. turns to socioeconomic problems.</p></li>
+                <li><p><strong>1966</strong> - On January 22, King moves into a Chicago slum tenement to attract attention to the living condition of the poor. In June, King and others begin the March Against Fear through the South.</p></li>
+                <li><p><strong>1967</strong> - On March 28, King leads a march that turns violent. This was the first time one of his events had turned violent.</p></li>
+                <li><p><strong>1968</strong> - At sunset on April 4, Martin Luther King, Jr. is fatally shot while standing on the balcony of the Lorraine Motel in Memphis, Tennessee.</p></li>
             </ul>
         </div>
-        <p><a href="#" id="tribute-link">click here!</a></p>
+        <h3>You can read and know more about Dr. King his life and fight for the civil rights to the black people in the USA on <a href="#" id="tribute-link" target="_blank">this page.</a></h3> <!--User Story #7-->
     </main>
-    <script src="app.js"></script>
 </body>
 </html>
